--- a/AspNetCoreWebAPI/fluentd_config.yml
+++ b/AspNetCoreWebAPI/fluentd_config.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: fluentd-config
+  name: aspnetcore-fluentd-config
   namespace: default
 data:
   td-agent.conf: |
