Add LOGLEVEL config

--- a/PythonRestAPI/pythonrestapi_config.yml
+++ b/PythonRestAPI/pythonrestapi_config.yml
@@ -8,6 +8,7 @@ data:
         "ENVIRONMENT": "development",
         "DEBUG": true,
         "TESTING": true,
+        "LOGLEVEL": "INFO",
         "SECRET_KEY": "PythonRestAPI",
         "JWT_SECRET_KEY": "PythonRestAPI",
         "SQLALCHEMY_TRACK_MODIFICATIONS": false,
