Revert o 8192 context length

--- a/Ollama/ollama.yml
+++ b/Ollama/ollama.yml
@@ -63,7 +63,7 @@ spec:
               memory: 42Gi
               nvidia.com/gpu: 1 # Use kubectl describe node <node_name> to check nvidia.com/gpu in Capacity and Allocatable section of the output
             limits:
-              nvidia.com/gpu: 1
+              nvidia.com/gpu: 1 # Required value: Limit must be set for non overcommitable resources
         - name: fluentd
           image: khteh/fluentd:latest
           volumeMounts:
