--- a/PythonRestAPI/fluentd_config.yml
+++ b/PythonRestAPI/fluentd_config.yml
@@ -19,6 +19,7 @@ data:
     ##
     ## built-in TCP input
     ## @see http://docs.fluentd.org/articles/in_forward
+    # '%(asctime)s %(levelname)-8s %(message)s'
     <source>
       @type forward
       @id input_forward
@@ -37,61 +38,66 @@ data:
     </source>
     <source>
       @type tail
+      @id input_tail
+      tag pythonrestapi
       #dummy [{"python_log": "2025-04-04 05:16:07 INFO     Running app..."}]
       path /var/log/pythonrestapi/log*
       pos_file /var/log/td-agent/pos/pythonrestapi_logs.pos
       read_from_head true
-      tag pythonrestapi
       key_name message
-      reserve_data true
       time_type string
       time_format %Y-%m-%d %H:%M:%S
       keep_time_key true
       # even if we failed to parse the time send the record over to splunk
       emit_invalid_record_to_error false
       reserve_time true
+      reserve_data true
       <parse>
           @type regexp
-          expression /^(?<time>.+?)\s+(?<level>\w+)\s+(?<message>.*)$/
+          expression /^(?<time>.+?) (?<level>\w{0,8}) (?<message>.*)$/
       </parse>      
     </source>
     <source>
       @type tail
+      @id input_tail
+      tag hypercorn
+      # [2025-04-04 09:09:23 +0000] [10] [INFO] Running on https://0.0.0.0:443 (QUIC) (CTRL + C to quit)
       path /var/log/hypercorn/errors.log
       pos_file /var/log/td-agent/pos/hypercorn_logs.pos
       read_from_head true
-      tag hypercorn
-      <parse>
-        @type multi_format
-        <pattern>
-          #format json
-          time_type string
-          time_key time
-          keep_time_key true
-          time_format %Y-%m-%d %H:%M:%S
-        </pattern>
-        <pattern>
-          format /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
-          time_format %Y-%m-%d %H:%M:%S
-        </pattern>
-      </parse>
-    </source>
-    <source>
-      @type tail
+      key_name message
       time_type string
-      time_format %Y-%m-%d %H:%M:%S [+-]HHMM
+      time_format %Y-%m-%d %H:%M:%S
       keep_time_key true
-      ## 12:36:00 0:0:0:0:0:0:0:1 0:0:0:0:0:0:0:1 POST /restapi-admin/api/getEnquiries cacheBuster=1549802159278 200 115646 0.778
-      #format /^(?<time>[0-9]{2}:[0-9]{2}:[0-9]{2}) (?<ip>[^ ]*) (?<dns>[^ ]*) (?<method>[A-Z]*) (?<url>[^ ]*) (?<querystring>\S*) (?<code>[^ ]*) (?<size>[^ ]*) (?<duration>[^ ]*)?$/
-      path /var/log/hypercorn/access.log
-      pos_file /var/log/td-agent/pos/hypercorn_access_logs.pos
-      read_from_head true
-      tag hypercorn-access
       emit_invalid_record_to_error false
+      reserve_data true
       reserve_time true
       <parse>
           @type regexp
-          expression /^[(?<time>.+?)]\s+[\d{2}]\s+[(?<level>\w+)]\s+(?<ip>[^ ]*)\s+\"(?<method>[A-Z]*) (?<url>[^ ]*)\"\s+(?<code>[^ ]*)\s+(?<size>[^ ]*)\s+(?<duration>[^ ]*)(?<message>.*)$/
+          expression /^(?<time>.+?) (?<level>\w{0,8}) (?<message>.*)$/
+      </parse>      
+    </source>
+    <source>
+      @type tail
+      @id input_tail
+      tag hypercorn-access
+      time_type string
+      time_format %Y-%m-%d %H:%M:%S [+-]HHMM
+      keep_time_key true
+      # https://docs.fluentd.org/configuration/parse-section
+      # nginx:    127.0.0.1 192.168.0.1 - [28/Feb/2013:12:00:00 +0900] "GET / HTTP/1.1" 200 777 "-" "Opera/12.0" -
+      # apache2:  192.168.0.1 - - [28/Feb/2013:12:00:00 +0900] "GET / HTTP/1.1" 200 777 "-" "Opera/12.0"
+      # hypercorn:192.168.0.149:43472 - - [04/Apr/2025:08:44:16 +0000] "GET /health/live 2" 200 2 "-" "kube-probe/1.27"
+      # expression /^(?<host>[^ ]*) [^ ]* (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>(?:[^\"]|\\.)*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>(?:[^\"]|\\.)*)" "(?<agent>(?:[^\"]|\\.)*)")?$/
+      path /var/log/hypercorn/access.log
+      pos_file /var/log/td-agent/pos/hypercorn_access_logs.pos
+      read_from_head true
+      emit_invalid_record_to_error false
+      reserve_time true
+      reserve_data true
+      <parse>
+          @type regexp
+          expression /^(?<time>.+?) (?<level>\w{0,8}) (?<host>[^ ]*) [^ ]* (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>(?:[^\"]|\\.)*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>(?:[^\"]|\\.)*)" "(?<agent>(?:[^\"]|\\.)*)")$/
       </parse>      
     </source>
     <filter fluent.*>
@@ -112,13 +118,43 @@ data:
         pattern /health/
      </exclude>
     </filter>
+
     <filter hypercorn-access>
       @type grep
       <exclude>
-        key url
+        key path
         pattern (^/$|health|^/$)
      </exclude>
     </filter>
+
+    <filter hypercorn>
+      @type parser
+      key_name message
+      reserve_data true
+      time_type string
+      time_format %Y-%m-%d %H:%M:%S
+      keep_time_key true
+      # even if we failed to parse the time send the record over to splunk
+      emit_invalid_record_to_error false
+      reserve_time true
+      reserve_data true
+      <parse> 
+        @type regexp
+        expression /^(?<time>.+?) (?<level>\w{0,8}) (?<message>.*)$/
+      </parse>
+    </filter>
+    <filter hypercorn>
+      @type parser
+      key_name message
+      reserve_time true
+      reserve_data true
+      remove_key_name_field true
+      <parse>
+        @type json
+        json_parser json
+      </parse>
+    </filter>
+
     <filter pythonrestapi>
       @type parser
       key_name message
@@ -129,14 +165,16 @@ data:
       # even if we failed to parse the time send the record over to splunk
       emit_invalid_record_to_error false
       reserve_time true
+      reserve_data true
       <parse> 
         @type regexp
-        expression /^(?<time>.+?)\s+(?<level>\w+)\s+(?<message>.*)$/
+        expression /^(?<time>.+?) (?<level>\w{0,8}) (?<message>.*)$/
       </parse>
     </filter>
     <filter pythonrestapi>
       @type parser
       key_name message
+      reserve_time true
       reserve_data true
       remove_key_name_field true
       <parse>
