--- a/Neo4J/neo4j_secret.yml
+++ b/Neo4J/neo4j_secret.yml
@@ -4,7 +4,7 @@ type: Opaque
 metadata:
   name: neo4j-secret
   labels:
-    app: db-neo4j
-    component: neo4j
+    app: neo4j
+    component: graph-db
 data:
   NEO4J_AUTH: bmVvNGovUEAkJHcwcmQ=
