--- a/PostgreSQL/postgresql_secret.yml
+++ b/PostgreSQL/postgresql_secret.yml
@@ -4,8 +4,8 @@ type: Opaque
 metadata:
   name: postgresql-secret
   labels:
-    app: db-postgresql
-    component: postgresql
+    app: postgresql
+    component: sql-db
 data:
   postgresql-user: Z3Vlc3Q=
   postgresql-password: UEAkJHcwcmQ=
