--- a/PostgreSQL/pgadmin.yml
+++ b/PostgreSQL/pgadmin.yml
@@ -4,7 +4,7 @@ metadata:
   name: pgadmin
   labels:
     app: pgadmin
-    component: postgresql
+    component: sql-db
 spec:
   serviceName: svc-pgadmin
   podManagementPolicy: Parallel
@@ -14,12 +14,12 @@ spec:
   selector:
     matchLabels:
       app: pgadmin
-      component: postgresql
+      component: sql-db
   template:
     metadata:
       labels:
         app: pgadmin
-        component: postgresql
+        component: sql-db
     spec:
       terminationGracePeriodSeconds: 10
       #      affinity:
