--- a/Ethereum/lodestar_validator.yml
+++ b/Ethereum/lodestar_validator.yml
@@ -44,6 +44,11 @@ spec:
             - name: metrics
               containerPort: 9002
               protocol: TCP
+          startupProbe: # failureThreshold * periodSeconds long enough to cover the worst case startup time
+            tcpSocket:
+              port: metrics
+            initialDelaySeconds: 10
+            periodSeconds: 10
           readinessProbe:
             tcpSocket:
               port: metrics
