--- a/NodeJSRestAPI/nodejsrestapi.yml
+++ b/NodeJSRestAPI/nodejsrestapi.yml
@@ -64,6 +64,16 @@ spec:
             - containerPort: 443
               name: https
               protocol: TCP
+          startupProbe: # failureThreshold * periodSeconds long enough to cover the worst case startup time
+            httpGet:
+              path: /health/ready
+              port: https
+              scheme: HTTPS
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 10
+            failureThreshold: 3
+            successThreshold: 1
           readinessProbe:
             httpGet:
               path: /health/ready
