--- a/RAG-Agent/ragagent_config.yml
+++ b/RAG-Agent/ragagent_config.yml
@@ -14,6 +14,7 @@ data:
         "SQLALCHEMY_TRACK_MODIFICATIONS": false,
         "DB_HOST": "svc-postgresql",
         "DB_MAX_CONNECTIONS": 10,
+        "CHROMA_URI": "http://svc-chroma",
         "NEO4J_URI": "neo4j://svc-neo4j:7687",
         "OLLAMA_URI": "http://svc-ollama"
     }
